# stm32f746-tflite-micro-mnist

./: .gitignore  LICENSE  README.md  build.sh  docker-build.sh  flash.sh  format.sh
source/: CMakeLists.txt  STM32F746NGHX_FLASH.ld  code-stm32f746.ioc
source/cmake/: cmsis_dsp_lib.cmake  cmsis_nn_lib.cmake  stm32f7_hal_driver.cmake  tensorflow_lite_micro.cmake
source/config/linkerfiles/: STM32F722ZETx_FLASH.ld  STM32F722ZETx_ITCM_FLASH.ld  STM32F723IEKx_FLASH.ld  STM32F723IEKx__ITCM_FLASH.ld  STM32F730I8Kx_external_FLASH.ld  STM32F730I8Kx_internal_FLASH.ld  STM32F746ZGTx_FLASH_ITCM.ld  STM32F756NGHx_AXIM-FLASH.ld  STM32F756NGHx_ITCM_FLASH.ld  STM32F767ZITx_ITCM_FLASH.ld  STM32F769NIHx_FLASH.ld  STM32F769NIHx_ITCM_FLASH.ld
source/libs/CMSIS/NN/Include/: arm_nnsupportfunctions.h
source/libs/flatbuffers/conan/test_package/: test_package.cpp
source/libs/flatbuffers/docs/source/: CppUsage.md  Internals.md
source/libs/flatbuffers/grpc/src/compiler/: cpp_generator.cc
source/libs/flatbuffers/grpc/tests/: message_builder_test.cpp
source/libs/flatbuffers/samples/: monster_generated.h  sample_bfbs.cpp  sample_text.cpp
source/libs/flatbuffers/src/: code_generators.cpp  flatc.cpp  flatc_main.cpp  flathash.cpp  idl_gen_cpp.cpp  idl_gen_dart.cpp  idl_gen_fbs.cpp  idl_gen_general.cpp  idl_gen_go.cpp  idl_gen_grpc.cpp  idl_gen_js_ts.cpp  idl_gen_json_schema.cpp  idl_gen_lobster.cpp  idl_gen_lua.cpp  idl_gen_php.cpp  idl_gen_python.cpp  idl_gen_rust.cpp  idl_gen_text.cpp  idl_parser.cpp  reflection.cpp  util.cpp
source/libs/flatbuffers/tests/: monster_extra_generated.h  monster_test.grpc.fb.h  monster_test_generated.h  test.cpp  test_assert.h  test_builder.cpp  test_builder.h
source/libs/flatbuffers/tests/fuzzer/: CMakeLists.txt  flatbuffers_parser_fuzzer.cc  flatbuffers_scalar_fuzzer.cc
source/libs/flatbuffers/tests/namespace_test/: namespace_test1_generated.h  namespace_test2_generated.h
source/libs/flatbuffers/tests/union_vector/: union_vector_generated.h
source/libs/freertos/FreeRTOS-Plus/Source/FreeRTOS-Plus-TCP/: FreeRTOS_DNS.c  FreeRTOS_TCP_WIN.c
source/libs/freertos/FreeRTOS/Source/: list.c
source/libs/freertos/FreeRTOS/Source/include/: croutine.h  task.h
source/libs/gemmlowp/contrib/: CMakeLists.txt
source/libs/tensorflow/_lite/core/: subgraph.h
source/libs/tensorflow/_lite/core/api/: flatbuffer_conversions.cc  op_resolver.cc  op_resolver.h
source/libs/tensorflow/_lite/experimental/micro/: debug_log.cc  micro_allocator.cc  micro_interpreter.cc  micro_interpreter.h  micro_mutable_op_resolver.cc  micro_mutable_op_resolver.h  simple_tensor_allocator.h
source/libs/tensorflow/_lite/kernels/: activations.cc  add.cc  arg_min_max.cc  basic_rnn.cc  bidirectional_sequence_lstm.cc  ceil.cc  comparisons.cc  cpu_backend_context.cc  cpu_backend_gemm_custom_gemv.h  cpu_backend_gemm_eigen.cc  cpu_backend_gemm_eigen.h  cpu_backend_gemm_ruy.h  cpu_backend_support.cc  depthwise_conv.cc  detection_postprocess.cc  div.cc  eigen_support.h  elementwise.cc  embedding_lookup.cc  embedding_lookup_sparse.cc  exp.cc  expand_dims.cc  fake_quant.cc  floor.cc  floor_mod.cc  fully_connected.cc  gather.cc  gather_nd.cc  gemmlowp_support.cc  gemmlowp_support.h  local_response_norm.cc  logical.cc  lstm.cc  lstm_eval.cc  lstm_eval.h  mfcc.cc  mul.cc  op_macros.h  quantize.cc  register.cc  (+16 more)
source/libs/tensorflow/_lite/kernels/internal/: common.h  compatibility.h  legacy_types.h  mfcc.cc  mfcc.h  mfcc_dct.cc  mfcc_mel_filterbank.cc  spectrogram.cc  strided_slice_logic.h  tensor.h  (+3 more)
source/libs/tensorflow/lite/c/: c_api_internal.c
source/libs/tensorflow/lite/core/: subgraph.cc
source/libs/tensorflow/lite/kernels/: activation_functor.h  add_n.cc  audio_spectrogram.cc  batch_to_space_nd.cc  bidirectional_sequence_rnn.cc  cast.cc  concatenation.cc  conv.cc  cpu_backend_context.h  cpu_backend_gemm.h  cpu_backend_gemm_gemmlowp.h  cpu_backend_gemm_params.h  cpu_backend_support.h  cpu_backend_threadpool.h  custom_ops_register.h  dequantize.cc  eigen_support.cc  fill.cc  floor_div.cc  hashtable_lookup.cc  if.cc  kernel_util.cc  kernel_util.h  l2norm.cc  lsh_projection.cc  matrix_diag.cc  matrix_set_diag.cc  maximum_minimum.cc  mirror_pad.cc  neg.cc  one_hot.cc  pack.cc  pad.cc  padding.h  pooling.cc  pow.cc  range.cc  rank.cc  reduce.cc  register.h  (+22 more)
source/libs/tensorflow/lite/schema/: schema_generated.h
source/schema/: schema.fbs
source/src/: CMakeLists.txt  main.cpp  stm32f7xx_hal_msp.c  stm32f7xx_it.c  syscalls.c  sysmem.c
source/src/inc/: digit.h  dwt_tools.h  main.h  mnist_schema_generated.h  model_data.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
(+98 files in other folders)
